switch to netlify

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -14,7 +14,7 @@
   <script src="https://unpkg.com/netlify-cms-default-exports@2.2.1/dist/netlify-cms-default-exports.js"></script>
   <script src="https://unpkg.com/netlify-cms-app@2.9.0/dist/netlify-cms-app.js"></script>
   <script src="https://unpkg.com/netlify-cms-backend-fs@0.4.4/dist/index.js"></script>
-  <script src="/admin/start.js"></script>
+  <script src="start.js"></script>
   <script>
     const CMS = window.NetlifyCmsApp
     CMS.registerBackend('file-system', FileSystemBackendClass)
